[package]
name = "mambro"
version = "0.1.0"
authors = ["A.E.Veltstra"]
edition = "2018"
repository = "https://github.com/aev-mambro2/mambro"
description = "Domain-specific ORM. Sets up and accesses a data store for integrating a file storage with remote web APIs."

[dependencies]
component = "0.1.0"
secstr = "0.3.2"
diesel = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.9.0"
