[package]
name = "domain"
version = "0.2.0"
authors = ["A.E.Veltstra"]
edition = "2018"
repository = "https://github.com/aev-mambro2/mambro"
description = "Domain-specific ORM. Sets up and accesses a data store for integrating a file storage with remote web APIs."

[dependencies]
secstr = "0.3.2"
sqlite = "0.25.0"
db     = { version = "0.2.0", path = "../db" }
tsql_fluent = { version = "0.1.0", path = "../tsql_fluent"}
